  Mark Carson (NIST) - see also https://www-x.antd.nist.gov/ipv6/sendip.html
* Addition of Wrapped ESP (WESP) header (IPv4,6)
* Support for external authentication and crypto modules for AH and ESP (IPv4,6)
  (demo xorauth "authentication" and xorcrypto "encryption")
* Extended uniform string argument handling
* outsourced module loading to modload.* and stop copying module data (jelmd)

Changes between sendip-2.5-mec-1 and sendip-2.5-mec-2
* Extended uniform integer argument handling (Mark Carson, NIST)
* SCTP header with some chunk/parameter support (IPv4,6) (Mark Carson, NIST)
* linux based crc32 implementation used by sctp replaced by the portable,
  less Linux/GNU C agnostic and less bloated code published in RFC 3309 (jelmd)

Changes between sendip-2.5-mec-2 and sendip-2.5-mec-3
  This version merged in sendip-2.5-mec-3a1 and 3a2 (Mark Carson, NIST):
* Extended uniform IP address handling, generation and CIDR notation support
* new timestamp parameter
* Modifications for uniform string and integer handling
* Looping capability and file-based parameters to create packet streams
* Replaced GNU extension/Linux agnostic, non-portable hsearch_r usage for
  file parameter handling with tsearch(3C) + friends (jelmd)
* Simplified random byte generator, code cleanups + header re-arrangements
  and fixes (jelmd)

Changes between sendip-2.5-mec-3 and sendip-2.6.0-jel
  Merged in all remaining post 2.5.0 commits (2018-04-07) from
  https://github.com/rickettm/SendIP master branch:
* setsocket option CLI support via general option -s {b|i|6}...
* use setsockopt() to set IPV6 header options
* RIP requests: fix addition/handling of entries
* make option handling reliable - do not allow to modify the original value
  by using 'const char *' (jelmd)
* misc fixes + code cleanups (jelmd)

Changes between sendip-2.6.0-jel and sendip-2.6.1-jel
* rename aweful long function names in compact.c and merge it to parseargs.*