@@ -60,7 +60,8 @@ SOBN= lib$(LIBRARY)$(DYNLIBEXT)
 SONAME= $(SOBN).$(DYNLIB_MAJOR)
 DYNLIB= $(SONAME).$(DYNLIB_MINOR)
 
-LIBSRCS= csum.c fargs.c protoname.c headers.c parseargs.c c_origin.c modload.c
+LIBSRCS= csum.c fargs.c protoname.c headers.c parseargs.c c_origin.c modload.c \
+	dump.c
 LIBOBJS= $(LIBSRCS:%.c=%.o)
 
 PROGSRCS = sendip.c gnugetopt.c
